# RestGap

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  README.zh-CN.md  clippy.toml  package-macos.sh  package-windows.ps1  rustfmt.toml  start.sh  status.sh  stop.sh
.cargo/: config.toml
.github/workflows/: audit.yml  ci.yml
assets/icons/macos/: restgap.icns
scripts/: build-dmg-macos.sh  build-universal2-macos.sh  release-preflight.sh
src/: i18n.rs  idle.rs  main.rs  skip_challenge.rs
src/common/: config.rs  mod.rs
src/linux/: mod.rs
src/macos/: config.rs  constants.rs  delegate.rs  error.rs  locale.rs  log.rs  mod.rs  state.rs  timer.rs  utils.rs
src/macos/ui/: countdown.rs  dialogs.rs  mod.rs  settings.rs  status_bar.rs
src/windows/: constants.rs  locale.rs  mod.rs  state.rs  timer.rs  utils.rs  wndproc.rs
src/windows/ui/: countdown.rs  dialogs.rs  mod.rs  tray.rs
